--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>一卡通</title>
+    <title>惠民惠农财政补贴资金“一卡通”</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="./static/Cesium/Cesium.js"></script>
     <script src="./static/cesium-navigation-es6/CesiumNavigation.umd.js"></script>
