细节优化及bug修复

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>惠民惠农财政补贴资金“一卡通”</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="static/favicon.ico" mce_href="static/favicon.ico" type="image/x-icon">
     <script src="./static/Cesium/Cesium.js"></script>
     <script src="./static/cesium-navigation-es6/CesiumNavigation.umd.js"></script>
     <script type="application/javascript" src="./static/jquery-1.9.1.min.js"></script>
